# ic-alloy-basic-eth

./: Cargo.toml  README.md  dfx.json
src/backend/: Cargo.toml  backend.did
src/backend/src/: lib.rs
src/backend/src/service/: get_address.rs  get_balance.rs  send_eth.rs
src/basic_eth/: Cargo.toml  basic_eth.did
src/basic_eth/declarations/: basic_eth.did.d.ts  basic_eth.did.js  index.d.ts  index.js
src/basic_eth/src/: lib.rs
src/basic_eth/src/service/: get_address.rs  get_balance.rs  mod.rs  send_eth.rs
